性能的关键

--- a/计算机组成原理/冯诺依曼体系结构：计算机组成的金字塔.md
+++ b/计算机组成原理/冯诺依曼体系结构：计算机组成的金字塔.md
@@ -28,9 +28,13 @@ I/O设备：输入/输出设备
 
 <img src="../![冯诺依曼体系](/Users/jackie/Documents/GitHub/DM/image/冯诺依曼体系.jpeg)"
 
+问题：图灵机和冯诺依曼机是两种不同的计算机吗？图灵机是一种什么样的计算机抽象呢？
 
+冯诺依曼机侧重于硬件抽象，而图灵机侧重于计算抽象。
 
+图灵机是一种思想模型（计算机的基本理论基础），是一种有穷的，构造性的问题的问题求解思路，图灵认为凡是能用算法解决的问题也一定能用图灵机解决；
 
+冯诺依曼提出了“存储程序”的计算机设计思想，并“参照”图灵模型设计了历史上第一台电子计算机，即冯诺依曼机。
 
 
 
