--- a/设计模式之美/面向对象，设计原则，设计模式，编程规范，重构.md
+++ b/设计模式之美/面向对象，设计原则，设计模式，编程规范，重构.md
@@ -61,11 +61,15 @@
 
 
 
+定义：面向对象面层和面向对象编程语言
 
+* 面向对象编程是一种编程范式或者编程风格。它以类或对象作为组织代码的基本单元，并将封装，抽象，继承，多态四个特性，作为代码设计和实现的基石。
 
+* 面向对象编程语言是支持类或对象的语法机制，并有现成的语法机制，能方便的实现面向对象编程四大特性（封装，抽象，继承，多态）的编程语言。
 
+面向对象软件开发要经历的三个阶段：
 
-
+​	面向对象分析（OOA），面向对象设计（OOD），面向对象编程（OOP）
 
 
 
