stackoverflow ELF和静态链接

--- a/计算机组成原理/冯诺依曼体系结构：计算机组成的金字塔.md
+++ b/计算机组成原理/冯诺依曼体系结构：计算机组成的金字塔.md
@@ -26,7 +26,7 @@ I/O设备：输入/输出设备
 
 **任何一台计算机的任何一个部件都可以归到运算器，控制器，存储器，输入设备和输出设备中，而所有的现代计算机也都是基于这个基础架构来设计开发的。**
 
-<img src="../![冯诺依曼体系](/Users/jackie/Documents/GitHub/DM/image/冯诺依曼体系.jpeg)"
+<img src="../image/冯诺依曼体系.jpeg">
 
 问题：图灵机和冯诺依曼机是两种不同的计算机吗？图灵机是一种什么样的计算机抽象呢？
 
